# cosdata

./: .dockerignore  .gitattributes  .gitignore  .typos.toml  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.docker.md  README.md  build.rs  config.toml  load-test.py  private_key.pem  pyproject.toml  rps-test.py  sparse-idf-vector-test.py  sparse-vector-test.py  test-dataset.py  test-grpc.py  test-query.py  test-realtime-vectors.py  test.py  test_dataset.py  test_metadata_filters.py  test_multiple_datasets.py
.cargo/: config.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: check.yml  ci.yml  docker-publish.yml  release.yml
benches/: bruteforce_vs_ann_benchmark.rs  cosine_similarity_benchmark.rs  dot_product_benchmark.rs  inverted_index_benchmark.rs  knn_query_benchmark.rs  lazy_item_benchmark.rs  lookup_table_benchmark.rs  lru_cache_benchmark.rs  sparse_ann_query_basic_benchmark.rs  sparse_ann_query_basic_dashmap_benchmark.rs  sparse_ann_query_benchmark.rs  sparse_ann_query_newDS_benchmark.rs  sparse_ann_query_new_ds_benchmark.rs  sparse_ann_query_rps_benchmark.rs  sparse_ann_query_tshashmap_benchmark.rs  write_benchmark.rs  write_concurrent_benchmark.rs
install/: install.sh
org/: Cargo.toml  RESTful-api.org  Separation_of_Storage_and_Compute.org  api-doc.org  buffered_file_io.org  channi.org  docs_index.md  graph-datalog.org  http-api.org  indexing.org  inverted-index-idf.org  inverted_index_design.org  inverted_index_ds.org  inverted_index_stats.org  lazy_items.org  lmdb.org  metadata_filtering_hnsw.org  node_registry_lru_cache.org  node_serialization.org  performant_fixed_set.rs  property-graph.org  quant.org  quant.org~  quaternary_multiplication.html  quaternary_multiplication.org  role-based-access-control.org  rule_evaluation_engine.org  transaction-system-design.org  transactions.org  vector_store_persistence.org  version_hashing_lmdb.org  version_hashing_lmdb.rs  versioning-context-based-querying.org  versioning.org
org/src/: cluster_hierarchy.rs  cosql.rs  cuckoo_filter_tree.rs  k_means_clustering_i8_clusters.rs  k_means_clustering_u8_simd.rs  main.rs  octal_simd_dot_product.rs  performant_fixed_set.rs  persist.rs  project_and_partition.rs  project_to_dim.rs  s3_client.rs  session_token.rs  version_tree.rs  versioning.rs  viewer.rs
proto/: vector_service.proto
src/: api_service.rs  api_service___old.rs  app_context.rs  args.rs  cfg_macros.rs  config_loader.rs  lib.rs  macros.rs  main.rs  test.rs  tls_server.rs  vector_store.rs  web_server.rs
src/api/: docs.rs  mod.rs  openapi.rs
src/api/auth/: authentication_middleware.rs  controller.rs  dtos.rs  error.rs  get_token.rs  mod.rs  service.rs
src/api/rbac/: controller.rs  dtos.rs  mod.rs
src/api/vectordb/: create.rs  fetch.rs  mod.rs  search.rs  upsert.rs
src/cosql/: common.rs  compute_clause.rs  condition.rs  data_type.rs  expression.rs  mod.rs  precedence.rs  query.rs  rule.rs  value.rs
src/cosql/definition/: entity.rs  mod.rs  relationship.rs
src/cosql/inference/: entity.rs  extend_entity.rs  mod.rs  relationship.rs
src/cosql/insertion/: entity.rs  mod.rs  relationship.rs
src/cosql/pattern/: entity.rs  mod.rs  relationship.rs
src/distance/: cosine.rs  dotproduct.rs  euclidean.rs  hamming.rs  mod.rs
src/grpc/: error.rs  metadata.rs  mod.rs  server.rs
src/grpc/auth/: mod.rs
src/grpc/collections/: mod.rs
src/grpc/indexes/: mod.rs
src/grpc/vectors/: mod.rs  test.rs  tests.rs
src/indexes/: geozone.rs  helpers.rs  inverted_index.rs  inverted_index_data.rs  inverted_index_item.rs  inverted_index_types.rs  mod.rs  om.rs
src/indexes/hnsw/: data.rs  mod.rs  offset_counter.rs  transaction.rs  types.rs
src/indexes/inverted/: data.rs  mod.rs  transaction.rs  types.rs
src/indexes/inverted_idf/: data.rs  mod.rs  transaction.rs
src/indexes/tf_idf/: data.rs  mod.rs  transaction.rs
src/metadata/: de.rs  mod.rs  query_filtering.rs  schema.rs
src/models/: api_service.rs  atomic_array.rs  buffered_io.rs  cache_loader.rs  chunked_list.rs  collection.rs  collection_cache.rs  collection_transaction.rs  collection_version_utils.rs  common.rs  cos_buffered_writer.rs  crypto.rs  cuckoo_filter_tree.rs  custom_buffered_reader.rs  custom_buffered_reader_tests.rs  custom_buffered_writer.rs  custom_buffered_writer_tests.rs  dot_product.rs  dry_run_writer.rs  durable_wal.rs  embedding_persist.rs  encoding_format.rs  file_persist.rs  fixedset.rs  identity_collections.rs  indexing_manager.rs  inverted_index.rs  inverted_index_idf.rs  kmeans.rs  knn_filter_inverted_index.rs  lazy_item.rs  lazy_load.rs  lookup_table.rs  lru_cache.rs  meta_persist.rs  mod.rs  om_tree_map.rs  om_versioned_vec.rs  page.rs  paths.rs  (+13 more)
src/models/dot_product/: arm64.rs  (+1 more)
src/quantization/: mod.rs  product.rs  scalar.rs
src/rbac/: guards.rs  middleware.rs  mod.rs  store.rs
src/storage/: bench_common.rs  inverted_index.rs  inverted_index_new.rs  inverted_index_new_ds.rs  inverted_index_old.rs  inverted_index_sparse_ann.rs  inverted_index_sparse_ann_basic.rs  inverted_index_sparse_ann_new_ds.rs  knn_query.rs  knn_query_new.rs  knn_query_old.rs  mod.rs  page.rs  sparse_ann_query.rs  sparse_ann_query_basic.rs  sparse_ann_query_newDS.rs  sparse_ann_query_new_ds.rs
tests/: .env.example  load-test.py  pyproject.toml  rps-test.py  sparse-idf-dataset-test-bm25.py  sparse-idf-dataset-test-ndcg.py  sparse-idf-dataset-test.py  sparse-idf-vector-test.py  sparse-vector-test.py  test-dataset-streaming.py  test-dataset-sync-txn.py  test-dataset.py  test-geofencing.py  test-grpc.py  test-metadata-dp-optimisation.py  test-om.py  test-performance.py  test-query.py  test-sparse-vector.py  test-tf-idf-bm25.py  test-tf-idf-ndcg.py  test.py  test_hybrid.py  test_metadata_filters.py  test_multiple_datasets.py  utils.py
tests/benches/: cosine_similarity_benchmark.rs  dot_product_benchmark.rs  lookup_table_benchmark.rs  sparse_ann_query_benchmark.rs
tests/modal_remote_vllm/: remote_cache_dense.py  vllm_embeddings.py
(+144 files in other folders)
