[package]
name = "waco"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = { version = "4.6.0", features = ["rustls-0_23"] }
actix-web-httpauth = "0.8.1"
async-channel = "2.3.1"
async-std = "1.12.0"
chrono = "0.4.38"
dashmap = "5.5.3"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.21"
once_cell = "1.19.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.4"
rustls = "0.23"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
thiserror = "1.0.61"
tokio = "1.37.0"
tokio-rustls =  {version="0.26.0" , default-features = false }
tower-service = "0.3.2"
tracing = "0.1.40"




