[package]
name = "cosdata"
version = "0.1.0"
edition = "2021"
default-run = "cosdata"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = { version = "4.6.0", features = ["rustls-0_23"] }
actix-web-httpauth = "0.8.1"
arcshift = "0.1.9"
async-channel = "2.3.1"
async-std = "1.12.0"
bincode = "1.3.3"
bs58 = "0.5.1"
byteorder = "1.5.0"
cbor = "0.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "5.5.3"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
half = { version = "2.4.1", features = ["serde", "rkyv"] }
http = "1.1.0"
http-body-util = "0.1.1"
lazy_static = "1.4.0"
lmdb = "0.8.0"
log = "0.4.21"
nom = "7.1.3"
num_cpus = "1.0"
once_cell = "1.19.0"
probabilistic-collections = "0.6.0"
rancor = "0.1.0-pre8"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.4"
rkyv = "0.7.44"
rustls = "0.23"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_cbor = "0.11.2"
serde_json = "1.0.117"
sha2 = "0.10.8"
siphasher = "1.0.1"
smallvec = "1.13.2"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = { version = "0.26.0", default-features = false }
tower-service = "0.3.2"
tracing = "0.1.40"
toml = "0.8.19"
jsonwebtoken = "9.3.0"
rand_chacha = "0.3.1"
cuckoofilter = "0.5.0"
rustc-hash = "2.0.0"

[dev-dependencies]
criterion = "0.5.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempfile = "3.10.1"

#[features]
#bench_group1 = []
#bench_group2 = []

[[bench]]
name = "write_benchmark"
harness = false
#required-features = ["bench_group1"]

[[bench]]
name = "write_concurrent_benchmark"
harness = false
#required-features = ["bench_group2"]

[[bench]]
name = "cosine_similarity_benchmark"
harness = false

[[bench]]
name = "dot_product_benchmark"
harness = false

[[bench]]
name = "lookup_table_benchmark"
harness = false

[[bench]]
name = "lru_cache_benchmark"
harness = false

[[bench]]
name = "inverted_index_benchmark"
harness = false

[[bench]]
name = "lazy_item_benchmark"
harness = false

[[bench]]
name = "knn_query_benchmark"
harness = false

[[bench]]
name = "sparse_ann_query_benchmark"
harness = false

[[bench]]
name = "sparse_ann_query_rps_benchmark"
harness = false

[[bench]]
name = "sparse_ann_query_basic_benchmark"
harness = false

[[bench]]
name = "sparse_ann_query_new_ds_benchmark"
harness = false

[[bench]]
name = "sparse_ann_query_basic_dashmap_benchmark"
harness = false

[[bench]]
name = "sparse_ann_query_tshashmap_benchmark"
harness = false

[[bench]]
name = "bruteforce_vs_ann_benchmark"
harness = false
