[package]
name = "cosdata"
version = "0.1.0"
edition = "2021"
default-run = "cosdata"

[lib]
doctest = false

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.6.0", features = ["rustls-0_23"] }
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "5.5.3"
env_logger = "0.11.3"
futures-util = "0.3.30"
half = { version = "2.4.1", features = ["serde", "rkyv"] }
lmdb = "0.8.0"
log = "0.4.21"
nom = "7.1.3"
num_cpus = "1.0"
rand = "0.8.5"
rayon = "1.10.0"
rkyv = "0.7.44"
rustls = "0.23"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_cbor = "0.11.2"
serde_json = "1.0.117"
sha2 = "0.10.8"
siphasher = "1.0.1"
toml = "0.8.19"
rustc-hash = "2.0.0"
ring = "0.17.8"
base64 = "0.22.1"
tonic = { version = "0.12.3", optional = true}
prost = { version = "0.13.4", optional = true}
prost-types = {version = "0.13.4", optional = true}
tonic-reflection = { version = "0.12.3", optional = true }
clap = { version = "4.5.31", features = ["derive"] }
snowball-stemmer = { git = "https://github.com/cosdata/snowball-stemmer.git" }
twox-hash = "2.1.0"
parking_lot = "0.12.3"
crossbeam = "0.8.4"
utoipa = {version = "5.3.1", features = ["actix_extras"] }
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["rt", "macros"] }

[dev-dependencies]
criterion = "0.5.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.37.0", features = ["rt"] }

[features]
default = []
grpc-server = ["prost", "prost-types", "tonic", "tonic-reflection", "tonic-build"]

[[bench]]
name = "write_benchmark"
harness = false
path = "tests/benches/write_benchmark.rs"

[[bench]]
name = "write_concurrent_benchmark"
harness = false
path = "tests/benches/write_concurrent_benchmark.rs"

[[bench]]
name = "cosine_similarity_benchmark"
harness = false
path = "tests/benches/cosine_similarity_benchmark.rs"

[[bench]]
name = "dot_product_benchmark"
harness = false
path = "tests/benches/dot_product_benchmark.rs"

[[bench]]
name = "lookup_table_benchmark"
harness = false
path = "tests/benches/lookup_table_benchmark.rs"

[[bench]]
name = "lru_cache_benchmark"
harness = false
path = "tests/benches/lru_cache_benchmark.rs"

[[bench]]
name = "sparse_ann_query_benchmark"
harness = false
path = "tests/benches/sparse_ann_query_benchmark.rs"

[build-dependencies]
tonic-build = { version = "0.12.3", optional = true }
