[project]
name = "cosdata"
version = "0.1.0"
description = "Cosdata test Client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "termcolor>=2.5.0",
]
