[project]
name = "cosdata"
version = "0.1.0"
description = "Cosdata test Client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beir>=2.1.0",
    "bm25s[core]>=0.2.12",
    "cosdata-sdk>=0.2.5",
    "cupy-cuda12x>=13.4.1",
    "fastparquet>=2024.11.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "py-rust-stemmers>=0.1.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "termcolor>=2.5.0",
    "tqdm>=4.67.1",
]
